add total value to the low balance email

--- a/app/views/notify_admins/low_quantity.text.erb
+++ b/app/views/notify_admins/low_quantity.text.erb
@@ -2,6 +2,8 @@ Hi Admins,
 
 I just wanted to let you know that <%= @coin.name %>  only has a balance of <%= @coin.quantity %>.  Please deposit some of these coins ASAP!
 
+The total value of all coins is currently <%= @total %>
+
 Thanks,
 
 Your Favorite Coin Machine
